[gd_scene load_steps=7 format=3 uid="uid://lv1th5nrttfr"]

[ext_resource type="Script" path="res://Scripts/menu_options.gd" id="1_5j5np"]
[ext_resource type="Texture2D" uid="uid://bbuvku73xyp6f" path="res://Imagenes/fondo1.jpg" id="2_evo53"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cp87"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvopm"]
bg_color = Color(0.0534209, 0.0534209, 0.0534208, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0my05"]
bg_color = Color(0.00139673, 0.00139673, 0.00139672, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y448d"]
bg_color = Color(0.0240298, 0.0240298, 0.0240298, 1)

[node name="Menu Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5j5np")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.320186, 0.000926084, 0.506444, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_evo53")
expand_mode = 1

[node name="marca_de_agua" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 873.0
offset_top = 561.0
offset_right = 1154.0
offset_bottom = 653.0
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 30
text = "Nombre_Del_Juego 
Version 1.0.1
"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.0
offset_top = -323.0
offset_right = -337.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Brillo" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_1cp87")
theme_override_styles/normal = SubResource("StyleBoxFlat_pvopm")
text = "Brillo
"

[node name="HSlider2" type="HSlider" parent="ColorRect/VBoxContainer/Brillo"]
layout_mode = 2
offset_left = 298.0
offset_right = 932.0
offset_bottom = 64.0

[node name="Idioma" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0my05")
text = "Idioma"

[node name="IdiomaOptios" type="OptionButton" parent="ColorRect/VBoxContainer/Idioma"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.148
anchor_bottom = 0.29
offset_left = 292.0
offset_top = 12.0
offset_right = 912.032
offset_bottom = 45.99
item_count = 2
popup/item_0/text = "Español"
popup/item_1/text = "Idioma"
popup/item_1/id = 1

[node name="Tamaño" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y448d")
text = "Tamaño
"

[node name="Tamaño Options" type="OptionButton" parent="ColorRect/VBoxContainer/Tamaño"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.148
anchor_bottom = 0.29
offset_left = 272.0
offset_top = 14.0
offset_right = 912.032
offset_bottom = 47.99
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Full scream"
popup/item_1/id = 1

[node name="Volumen2" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y448d")
text = "Volumen
"

[node name="SliderVolumen" type="HSlider" parent="ColorRect/VBoxContainer/Volumen2"]
layout_mode = 0
offset_left = 304.0
offset_top = 18.0
offset_right = 930.0
offset_bottom = 56.0
min_value = -50.0
max_value = 0.0
value = -15.0

[node name="Controles" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y448d")
text = "Controles"

[node name="Atras" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y448d")
text = "Atras
"

[connection signal="pressed" from="ColorRect/marca_de_agua" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Brillo" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Brillo" to="." method="_on_brillo_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Idioma" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Idioma" to="." method="_on_idioma_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Tamaño" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Tamaño" to="." method="_on_tamaño_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Volumen2" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Volumen2" to="." method="_on_volumen_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Controles" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Controles" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Atras" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Atras" to="." method="_on_atras_pressed"]
