extends Control


func _on_brillo_pressed() -> void:
	pass # Replace with function body.


func _on_idioma_pressed() -> void:
	pass # Replace with function body.


func _on_tamaÃ±o_2_pressed() -> void:
	pass # Replace with function body.


func _on_volumen_2_pressed() -> void:
	pass # Replace with function body.


func _on_atras_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/menu_principal.tscn")
